// ─────────────────────────────────────────────────────────────────
// schema.prisma — Database models · GAD Municipal de Cañar
// ─────────────────────────────────────────────────────────────────

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ── Enums ─────────────────────────────────────────────────────────

enum UserStatus {
  ACTIVE
  INACTIVE
}

enum RefreshTokenStatus {
  ACTIVE
  REVOKED
}

enum PropertyZone {
  URBAN
  RURAL
}

enum RequestType {
  CONSTRUCTION_PERMIT
  BUILDING_LINE
  PLAN_APPROVAL
}

enum RequestStatus {
  DRAFT
  PENDING_SECRETARY
  OBSERVED
  PENDING_TECHNICIAN
  INSPECTION
  PENDING_PAYMENT
  PAID
  APPROVED
  REJECTED
}

// ── Models ───────────────────────────────────────────────────────

model User {
  id        String  @id @default(cuid())
  name      String?
  lastname  String?
  password  String
  email     String  @unique
  cedula    String? @unique
  direction String?

  status UserStatus @default(ACTIVE)

  emailVerified      Boolean   @default(false) @map("email_verified")
  verificationCode   String?   @map("verification_code")
  verificationExpiry DateTime? @map("verification_expiry")

  createdAt DateTime  @default(now()) @map("created_at")
  updatedAt DateTime  @updatedAt @map("updated_at")
  deletedAt DateTime? @map("deleted_at")

  // User module relations
  permissions          UserPermission[]
  roleAssignments      UserRole[]
  assignedRoles        RoleAssignment[] @relation("assignedTo")
  roleAssignmentsGiven RoleAssignment[] @relation("assignedBy")
  refreshTokens        RefreshToken[]

  // External module relations
  citizenRequests    Request[]             @relation("CitizenRequests")
  architectRequests  Request[]             @relation("ArchitectRequests")
  auditLogs          AuditLog[]
  secretaryDecisions SecretaryDecision[]

  @@map("user")
}

model RefreshToken {
  id        String             @id @default(cuid())
  userId    String             @map("user_id")
  tokenHash String             @map("token_hash")
  status    RefreshTokenStatus @default(ACTIVE)
  expiresAt DateTime           @map("expires_at")
  createdAt DateTime           @default(now()) @map("created_at")
  revokedAt DateTime?          @map("revoked_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, status])
  @@map("refresh_token")
}

model Permission {
  id          String   @id @default(cuid())
  name        String   @unique
  description String?
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  users UserPermission[]
  roles RolePermission[]

  @@map("permission")
}

model Role {
  id          String   @id @default(cuid())
  name        String   @unique
  description String?
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  permissions     RolePermission[]
  users           UserRole[]
  roleAssignments RoleAssignment[]

  @@map("role")
}

model UserPermission {
  userId       String   @map("user_id")
  permissionId String   @map("permission_id")
  createdAt    DateTime @default(now()) @map("created_at")

  user       User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  permission Permission @relation(fields: [permissionId], references: [id], onDelete: Cascade)

  @@id([userId, permissionId])
  @@map("user_permission")
}

model RolePermission {
  roleId       String   @map("role_id")
  permissionId String   @map("permission_id")
  createdAt    DateTime @default(now()) @map("created_at")

  role       Role       @relation(fields: [roleId], references: [id], onDelete: Cascade)
  permission Permission @relation(fields: [permissionId], references: [id], onDelete: Cascade)

  @@id([roleId, permissionId])
  @@map("role_permission")
}

model UserRole {
  userId    String   @map("user_id")
  roleId    String   @map("role_id")
  createdAt DateTime @default(now()) @map("created_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
  role Role @relation(fields: [roleId], references: [id], onDelete: Cascade)

  @@id([userId, roleId])
  @@unique([userId])
  @@map("user_role")
}

model RoleAssignment {
  id           String   @id @default(cuid())
  userId       String   @map("user_id")
  roleId       String   @map("role_id")
  assignedById String   @map("assigned_by_id")
  assignedAt   DateTime @default(now()) @map("assigned_at")

  user       User @relation("assignedTo", fields: [userId], references: [id], onDelete: Cascade)
  role       Role @relation(fields: [roleId], references: [id], onDelete: Cascade)
  assignedBy User @relation("assignedBy", fields: [assignedById], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([roleId])
  @@index([assignedById])
  @@map("role_assignments")
}

model Request {
  id           String        @id @default(uuid())
  request_type RequestType
  status       RequestStatus @default(PENDING_SECRETARY)

  citizen_id String
  citizen    User   @relation("CitizenRequests", fields: [citizen_id], references: [id])

  architect_id String?
  architect    User?   @relation("ArchitectRequests", fields: [architect_id], references: [id])

  property_id String   @unique
  property    Property @relation(fields: [property_id], references: [id])

  attachments        Attachment[]
  history            RequestHistory[]
  inspection         Inspection?
  resolution         Resolution?
  secretary_decision SecretaryDecision?

  created_at DateTime @default(now())
  updated_at DateTime @updatedAt

  @@map("requests")
}

model Property {
  id            String       @id @default(uuid())
  cadastral_key String?
  address       String
  area          Float?
  zone          PropertyZone
  coordinates   String?

  request Request?

  @@map("properties")
}

model Attachment {
  id         String  @id @default(uuid())
  name       String
  type       String
  url        String
  size       Int?
  hash       String?
  folder     String  @default("OTROS")
  ipfs_cid         String?
  ipfs_status      String?   @default("PENDING")
  ipfs_uploaded_at DateTime?
  ipfs_provider    String?
  blockchain_status           String?   @default("PENDING")
  blockchain_tx_hash          String?
  blockchain_anchored_at      DateTime?
  blockchain_network          String?
  blockchain_contract_address String?
  blockchain_evidence_id      String?

  request_id String
  request    Request @relation(fields: [request_id], references: [id], onDelete: Cascade)

  created_at DateTime @default(now())

  @@map("attachments")
}

model RequestHistory {
  id              String @id @default(uuid())
  previous_status String
  new_status      String
  comment         String
  responsible     String

  request_id String
  request    Request @relation(fields: [request_id], references: [id], onDelete: Cascade)

  created_at DateTime @default(now())

  @@map("request_histories")
}

model Inspection {
  id         String   @id @default(uuid())
  date       DateTime
  technician String
  comments   String?
  photos     String[]

  request_id String  @unique
  request    Request @relation(fields: [request_id], references: [id], onDelete: Cascade)

  created_at DateTime @default(now())
  updated_at DateTime @updatedAt

  @@map("inspections")
}

model Resolution {
  id                 String   @id @default(uuid())
  comments           String
  payment_amount     Float?
  items              String[]
  resolution_date    DateTime @default(now())
  calculation_detail String?  @db.Text
  auto_calculated    Boolean  @default(false)

  request_id String  @unique
  request    Request @relation(fields: [request_id], references: [id], onDelete: Cascade)

  @@map("resolutions")
}

model AuditLog {
  id         String  @id @default(uuid())
  action     String
  details    String
  ip_address String?

  user_id    String?
  user       User?   @relation(fields: [user_id], references: [id], onDelete: SetNull)
  user_email String

  previous_hash String?
  current_hash  String?

  created_at DateTime @default(now())

  @@map("audit_logs")
}

model SecretaryDecision {
  id                  String  @id @default(uuid())
  approved            Boolean
  remarks             String? @db.Text
  signature_validated Boolean @default(false)

  request_id String  @unique
  request    Request @relation(fields: [request_id], references: [id], onDelete: Cascade)

  secretary_id String
  secretary    User   @relation(fields: [secretary_id], references: [id])

  created_at DateTime @default(now())

  @@map("secretary_decisions")
}

model FeeRule {
  id           String       @id @default(uuid())
  request_type RequestType
  zone         PropertyZone
  base_fee     Float
  rate_per_m2  Float
  description  String

  created_at DateTime @default(now())
  updated_at DateTime @updatedAt

  @@unique([request_type, zone])
  @@map("fee_rules")
}
